--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <html>
-    <head></head>
+    <head>
+        <style>
+            h1,h3{
+                   color: blueviolet;
+                   background-color: blanchedalmond;
+            }
+            *{
+                text-align: center;
+            }
+        </style>
+    </head>
     <title></title>
     <body>
         <!-- This makes a pink and blue background -->
         <p style="background: linear-gradient(pink,blue)">
            This is very cool
         </p>
-        <p>
-            <h1>Hello Everyone</h1>
-            <style>
-                #h1{
-                    color: aquamarine;
-                    background-color: bisque;
-                }
-            </style>
-        </p>
+        <h1>Zayan's website</h1>
+        <h3>Homepage</h3>
     </body>
 </html>
